--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.icon-button {
+  padding: 0 !important;
+}
+
+.css-10hburv-MuiTypography-root {
+  font-size: 0.85rem !important;
+}
+
+.css-1veqpb2-MuiAvatar-root {
+  width: 3.85rem !important;
+  height: 3.85rem !important;
+  object-fit: fill !important;
+}
+
+.css-cveggr-MuiListItemIcon-root {
+  min-width: 2rem !important;
+}
+
+.css-1p823my-MuiListItem-root {
+  padding-top: 0.25rem !important;
+  padding-bottom: 0 !important;
 }
