--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-.icon-button {
+/* .icon-button {
   padding: 0 !important;
 }
 
@@ -33,4 +33,4 @@ code {
 .css-1p823my-MuiListItem-root {
   padding-top: 0.25rem !important;
   padding-bottom: 0 !important;
-}
+} */
