--- a/src/App.css
+++ b/src/App.css
@@ -41,21 +41,17 @@
   padding: 0 !important;
 }
 
-.css-10hburv-MuiTypography-root {
-  font-size: 0.85rem !important;
-}
-
-.css-1veqpb2-MuiAvatar-root {
+/* .css-1veqpb2-MuiAvatar-root {
   width: 3.85rem !important;
   height: 3.85rem !important;
   object-fit: fill !important;
 }
 
-.css-cveggr-MuiListItemIcon-root {
-  min-width: 2rem !important;
-}
-
 .css-1p823my-MuiListItem-root {
   padding-top: 0.25rem !important;
   padding-bottom: 0 !important;
+} */
+
+.MuiListItemText-primary {
+  font-size: 0.85rem !important;
 }
